kubernetes/apps/automation/n8n/app/httproute.yaml
# Internal access to n8n web UI
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-internal
spec:
  hostnames:
    - "n8n.${SECRET_DOMAIN}"
  parentRefs:
    - kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: n8n
          port: 5678
      matches:
        - path:
            type: PathPrefix
            value: /
